# slumworld_temp

./: README.md  pyproject.toml
Configurations_yamls/: test_low_show_test_ms2016_md2001.yml  tile_tilingMS.yml  train_unet_v2_dinov3_low_shot_finetune_test_vanilla_ms2016_to_md2001.yml
runners/: README.md  align_shapefiles.py  animate_training_samples.py  binarize_image.py  change_detection.py  check_resolution.py  create_register.py  crf_postprocess_parallel.py  crf_postprocess_pipeline.py  dataset_from_folder.py  evaluate.py  evaluate_from_folders.py  finetune_dummy_tiler.py  generate_shapefile.py  inference.py  join_datasets.py  kfold_dataset_from_folder.py  overlay_map_on_image.py  preprocess_features.py  reconstruct_map_from_tiles.py  resplit_dataset.py  run-hyperparameter_search.sh  simplify_shapefiles.py  tile_kfold.py  tile_standard.py  tile_standard_diff_brightness.py  tile_with_overlap.py  to_grayscale.py  train.py  update_model_keys.py
runners/crf_postprocess_pipeline_adjusted/: crf_postprocess_pipeline.py
src/: .gitignore  README.md  README_MODEL.md  SatelliteDataset.py  base_tiler.py  check_tile_size.py  cnn_tiler.py  custom_transformations.py  datasets.py  inspector.py  model.py  overlap_tiler.py  predictor.py  pvtv2.py  registry.py  trainer.py  transforms_loader.py  utilities.py
src/.ipynb_checkpoints/: data_loader-checkpoint.py  image_tiler-checkpoint.py
